Сдача практического задания ко второму занятию.
- На занятии введены Missle, ICollision.
- Косметически доработал введенный класс "снаряда".
- Описал поведение "астероидов" и "комет" при столкновении со снарядом.
- Добавил проверку размеров экрана в начале GameLogic.Init().
- Добавил GameObjectException для проверки аргументов конструктора Celestial.

--- a/The Game/The Game.csproj
+++ b/The Game/The Game.csproj
@@ -49,6 +49,9 @@
     <Compile Include="Asteroid.cs" />
     <Compile Include="Celestial.cs" />
     <Compile Include="Comet.cs" />
+    <Compile Include="Exceptions.cs" />
+    <Compile Include="ICollision.cs" />
+    <Compile Include="Missle.cs" />
     <Compile Include="Planet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
