Сдача практического задания к третьему уроку.
- На занятии введены корабль со здоровьем, GameOver.
- Добавил подсчет очков и сбитых объектов.
- Добавил схемы создания звезд и атероидов.
- "Оживил" планету, разделил снаряды и подсчет очков, добавил второй конец.
- Уточнил порядок вызовов за InGame.Load() с использованием стандартного обобщенного делегата Func<>.
- Применил обобщенные списки. Добавил задержку после выстрела.
- Добавил аптечки.
- Запись сообщений об окончании игры в файл log.txt.
- Крупный метод InGame.UpdateTargets() с проверкой всех столкновений.

--- a/DerivingClasses/DerivingClasses.csproj
+++ b/DerivingClasses/DerivingClasses.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Crew.cs" />
+    <Compile Include="Crew_generic.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
