--- a/The Game/The Game.csproj
+++ b/The Game/The Game.csproj
@@ -48,17 +48,21 @@
   <ItemGroup>
     <Compile Include="Celestial_Asteroid.cs" />
     <Compile Include="Celestial.cs" />
+    <Compile Include="Celestial_EngiKit.cs" />
     <Compile Include="Classes_events.cs" />
     <Compile Include="Celestial_Comet.cs" />
     <Compile Include="Classes_exceptions.cs" />
-    <Compile Include="ICollision.cs" />
+    <Compile Include="Interfaces.cs" />
     <Compile Include="Celestial_missle.cs" />
     <Compile Include="Celestial_Planet.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Celestial_Ship.cs" />
     <Compile Include="Celestial_star.cs" />
-    <Compile Include="TheGameLogic.cs" />
+    <Compile Include="Scenes_BaseScene.cs" />
+    <Compile Include="Scenes_Menu.cs" />
+    <Compile Include="Scenes_SceneManager.cs" />
+    <Compile Include="Scenes_InGame.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
