К 4 занятию. Дополнительно: доработал меню.

--- a/The Game/The Game.csproj
+++ b/The Game/The Game.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Celestial_star.cs" />
     <Compile Include="Scenes_BaseScene.cs" />
     <Compile Include="Scenes_Menu.cs" />
+    <Compile Include="Scenes_Menu_Option.cs" />
     <Compile Include="Scenes_SceneManager.cs" />
     <Compile Include="Scenes_InGame.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
