--- a/CompanyApp.Controls/CompanyApp.Controls.csproj
+++ b/CompanyApp.Controls/CompanyApp.Controls.csproj
@@ -56,8 +56,15 @@
       <DependentUpon>CrewControl.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="DepartmentDetailsControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DepartmentDetailsControl.xaml.cs">
+      <DependentUpon>DepartmentDetailsControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
