--- a/WpfApp1/CompanyApp.csproj
+++ b/WpfApp1/CompanyApp.csproj
@@ -55,6 +55,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="EditorForDepartment.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="EntryEditor.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -66,6 +70,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="EditorForDepartment.xaml.cs">
+      <DependentUpon>EditorForDepartment.xaml</DependentUpon>
     </Compile>
     <Compile Include="EntryEditor.xaml.cs" />
     <Compile Include="MainWindow.xaml.cs">
